# ButterflySoulEngine

./: Cargo.toml  README.md
src/: lib.rs
src/modules/: mod.rs
src/modules/console/: mod.rs
src/modules/context/: control.rs  mod.rs  render.rs
src/modules/enity/: base.rs  mod.rs  position.rs  track.rs  view.rs
src/modules/enity.old.old/: mod.rs
src/modules/enity.old.old/implement/: hitbox.rs  mod.rs  position.rs  render.rs  size.rs  viewbox.rs
src/modules/event/: mod.rs
src/modules/scene/: mod.rs
src/modules/scene/utils/: grid.rs  mod.rs  simple_grid.rs
src/modules/ui/: base.rs  event.rs  macros.rs  mod.rs
src/modules/ui/object/: container.rs  image.rs  mod.rs  text.rs
src/utils/: bar.rs  bse_map.rs  event.rs  hitbox.rs  mod.rs  polygon.rs  rchash.rs  rect.rs  vector.rs  viewbox.rs
