[package]
name = "butterfly-soul-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.49.2"
indexmap = { version = "2.2.5", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
paste = "1.0.14"
serde_json = "1.0.115"
text-to-png = "0.2.0"
typetag = "0.2.16"
postcard = "1.0.8"

[dependencies.uuid]
version = "1.3.4"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
